--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/fa561f5e23.js"></script>
-
+    <link rel="icon" type="image/png" href="/images/tab-logo.png" sizes="32x32">   
 </head>
 
 <body>
